Generate CRT java file